--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4061,3 +4061,136 @@ NTRS Research Center: Langley Research Center (LaRC)},
 	year = {1967},
 	doi = {10.2172/4314326},
 }
+
+@techreport{steffy_experimental_1970,
+	title = {Experimental {Dynamic} {Analysis} of the {MSRE} with {233U} {Fuel}},
+	url = {https://moltensalt.org/references/static/downloads/pdf/ORNL-TM-2997.pdf},
+	abstract = {Tests were performed on the Molten-Salt Reactor Experiment to deter- 
+mine the system time response to step changes in reactivity, the neutron- 
+flux-to-reactivity frequency response, and the outlet-temperature-to- 
+power frequency response. The results of each of these were found to agrek 
+(J 
+i 
+b 
+favorably with theoretical predictions. 
+The t ime response tests were performed with the reactor operating 
+at 1, 5, and 8 MW and substantiated the theoretical predictions that fol- 
+lowing a reactivity perturbation the system would return to its original 
+power level more rapidly at higher power levels than at lower power levels 
+and was load-following at all significant power levels. A noisy flux sig- 
+nal (caused by circulating voids) hampered detailed comparison of the 
+experimental results and theoretical predictions. 
+Neutron flux-to-reactivity frequency-response measurements were per- 
+formed using periodic, pseudorandom binary and ternary sequences. This 
+type of test effectively prevented much of the random noise contamination 
+of the neutron flux from entering the final analyses and gave results 
+which contained little scatter. 
+the theoretical predictions and verified that for the \&!,\%E, 
+The results were in good agreement with 
+stability increases with power level. 
+the degree of 
+Outlet-temperature-to-Wwer frequency-response measurements were com- 
+pared with similar measurements made during operation with the 23\% fuel 
+and verified that the basic thermal properties of the reactor system were 
+essentially the same as expected.},
+	number = {ORNL-TM-2997},
+	urldate = {2024-11-07},
+	institution = {Oak Ridge National Laboratory (ORNL)},
+	author = {Steffy, R. C.},
+	month = apr,
+	year = {1970},
+	file = {ORNL-TM-2997.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\DXW8ZFDH\\ORNL-TM-2997.pdf:application/pdf},
+}
+
+@phdthesis{singh_study_2019,
+	title = {{STUDY} {OF} {THE} {DYNAMIC} {BEHAVIOR} {OF} {MOLTEN}-{SALT} {REACTORS}},
+	url = {https://trace.tennessee.edu/utk_gradthes/5482},
+	school = {University of Tennessee - Knoxville},
+	author = {Singh, Vikram},
+	month = may,
+	year = {2019},
+	file = {"STUDY OF THE DYNAMIC BEHAVIOR OF MOLTEN-SALT REACTORS" by Vikram Singh:C\:\\Users\\Sun Myung\\Zotero\\storage\\FMABLK6K\\5482.html:text/html},
+}
+
+@inproceedings{zanetti_innovative_2015,
+	address = {Japan},
+	title = {An innovative approach to dynamics modeling and simulation of the molten salt rector experiment},
+	abstract = {The Molten Salt Reactor Experiment (MSRE) was a circulating fuel thermal reactor built
+and operated in the sixties As the only Molten Salt Reactor (MSR) testing facility
+for which extensive experimental data are available, it can be considered as a reference
+for the development of modeling approaches for the studies related to the Gen-IV MSR
+In this work, a geometric multi-scale approach has been adopted for the simulation
+of the MSRE plant The data and the experimental results relative to the U-233 fuelled
+reactor are considered The neutronic parameters have been determined using the Monte
+Carlo code Serpent The reactor core is divided into three radial regions, each one
+described by a 3D channel in which Navier-Stokes and energy conservation equations
+plus delayed neutron precursors (DNP) balance equations are solved Determination of
+the generated power is obtained employing a point kinetics like equation, fed with
+importance weighted values of temperatures and DNP concentrations The remaining part
+of the plant, that includes the primary and secondary cooling circuits, is modeled
+by means of zero-dimensional components The results attained with such modeling approach
+are compared with experimental data both in time and frequency domain, showing good
+agreement The adopted approach, thanks to the punctual, coupled solution of the governing
+equations in the core, gives better insights into the thermal behavior of the graphite
+and its effects on MSR dynamics than commonly used correlation-based solvers (author)},
+	booktitle = {Proceedings of the {International} {Conference} on {Physics} of {Reactors} ({PHYSOR} 2014)},
+	author = {Zanetti, M. and Luzzi, L. and Cammi, A. and Fiorina, C.},
+	month = mar,
+	year = {2015},
+	note = {JAEA-Conf--2014-003
+INIS Reference Number: 47042668},
+	pages = {14},
+}
+
+@article{mochizuki_validation_2022,
+	title = {Validation of neutronics and thermal-hydraulics coupling model of the {RELAP5}-{3D} code using the {MSRE} reactivity insertion tests},
+	volume = {389},
+	issn = {0029-5493},
+	url = {https://www.sciencedirect.com/science/article/pii/S0029549322000231},
+	doi = {10.1016/j.nucengdes.2022.111669},
+	abstract = {In designing a molten salt reactor, a calculation code that combines neutronics and thermal-hydraulics is required. For this purpose, it is realistic to verify and use a system code that has been conventionally developed. As the system code, the RELAP5-3D code which has been used by many researchers was selected. The only transient tests using a molten salt reactor were performed at Molten Salt Reactor Experiment (MSRE) in the Oak Ridge National Laboratory (ORNL). Experimental results have been reported in which the reactivity is applied stepwise during MSRE operation at 1, 5 and 8 MW. Although there are few examples of analyzing this data, the analysis up to now has revealed that there is a discrepancy in the reactivity values described in the report. It has been also clarified by the data analysis in the present study that the amount of applied reactivity should be opposite to be consistent with the previous results of the same author. Therefore, the values were corrected and analyzed. In RELAP5-3D, the entire system from the core to the air cooler was modeled. The RELAP5-3D input deck was created based on the MSRE system data described in ORNL's past reports and recently edited reports for benchmark analysis. For RELAP5-3D, since it is necessary to prepare binary files of working fluid properties, the thermophysical properties about molten fuel salt and molten coolant salt were generated and used. The RELAP5-3D code could trace the three reactor power transients measured in the experiment, in general. However, in the case of low reactor power, the undershoot after the peak became large when the power returned to the original power level. At high reactor power, the undershoot was small and the behavior was in good agreement with the experimental result. As a result, it is considered that the calculation using the neutronics and thermal-hydraulics coupling model of the RELAP5-3D code could be validated.},
+	urldate = {2024-11-07},
+	journal = {Nuclear Engineering and Design},
+	author = {Mochizuki, Hiroyasu},
+	month = apr,
+	year = {2022},
+	keywords = {Coupling analysis, MSRE, Reactivity insertion, RELAP5-3D},
+	pages = {111669},
+}
+
+@techreport{thoma_chemical_1971,
+	title = {{CHEMICAL} {ASPECTS} {OF} {MSRE} {OPERATIONS}.},
+	url = {https://www.osti.gov/biblio/4675946},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {ORNL-4658},
+	urldate = {2024-11-08},
+	institution = {Oak Ridge National Lab. (ORNL), Oak Ridge, TN (United States)},
+	author = {Thoma, R. E.},
+	month = jan,
+	year = {1971},
+	doi = {10.2172/4675946},
+	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\6PTESDWN\\Thoma - 1971 - CHEMICAL ASPECTS OF MSRE OPERATIONS..pdf:application/pdf},
+}
+
+@phdthesis{burke_analysis_2019,
+	title = {{AN} {ANALYSIS} {OF} {THE} {MSRE} {U}-233 {INITIAL} {CRITICALITY} {FOR} {BENCHMARK} {PROBLEM} {DEVELOPMENT}},
+	url = {https://repository.gatech.edu/server/api/core/bitstreams/06739ab4-be94-4ec0-85c1-03aa1f56d333/content},
+	urldate = {2024-11-08},
+	school = {Georgia Institute of Technology},
+	author = {Burke, Paul},
+	month = dec,
+	year = {2019},
+	file = {content.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\U72ADRYI\\content.pdf:application/pdf},
+}
+
+@techreport{engel_zero-power_1972,
+	title = {Zero-{Power} {Experiments} with {233U} in the {MSRE}},
+	language = {en},
+	number = {ORNL-TM-3963},
+	institution = {Oak Ridge National Laboratory (ORNL)},
+	author = {Engel, J R and Prince, B. E.},
+	month = dec,
+	year = {1972},
+	file = {IEngeI - ZE 1 2 8-P0WE R EXP E RIMEWTS WITH 233UIN THE MSRE.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\IJW2XHES\\IEngeI - ZE 1 2 8-P0WE R EXP E RIMEWTS WITH 233UIN THE MSRE.pdf:application/pdf},
+}
