--- a/main.tex
+++ b/main.tex
@@ -134,32 +134,32 @@ nogroupskip=true]
 \mainmatter
 \glsresetall
 
-\chapter{Introduction}
-\label{chap:intro}
-%\input{introduction}
+%\chapter{Introduction}
+%\label{chap:intro}
+%%\input{introduction}
+%%\glsresetall
+%
+%\chapter{Molten Salt Reactor Modeling and Simulation}
+%\label{chap:lit}
+%\input{lit}
 %\glsresetall
-
-\chapter{Molten Salt Reactor Modeling and Simulation}
-\label{chap:lit}
-\input{lit}
-\glsresetall
-
-\chapter{Verification of Multiphysics Features in Moltres}
-\label{chap:verification}
-\input{verification}
-\glsresetall
-
-\chapter{Hybrid $S_N$-Diffusion Method}
-\label{chap:hybrid}
-\input{hybrid}
-\glsresetall
+%
+%\chapter{Verification of Multiphysics Features in Moltres}
+%\label{chap:verification}
+%\input{verification}
+%\glsresetall
+%
+%\chapter{Hybrid $S_N$-Diffusion Method}
+%\label{chap:hybrid}
+%\input{hybrid}
+%\glsresetall
 
 \chapter{Demonstration of the Hybrid Method with the MSRE}
 \label{chap:msre}
 \input{msre}
 \glsresetall
 
-\chapter{Demonstration of Time-Dependent Reactivity Initiated Transients}
+\chapter{Demonstration of Time-Dependent Reactivity-Initiated Transients}
 \label{chap:transient}
 \input{transient}
 \glsresetall
@@ -174,7 +174,7 @@ nogroupskip=true]
 \mainmatter
 \setcounter{page}{\value{counterforappendices}}
 \appendix
-\input{appendix}
+%\input{appendix}
 
 \end{document}
 \endinput
